[package]
name = "devlogr"
version = "0.1.1"
edition = "2021"
description = "A simple progress logger for developers"
license = "MIT"
repository = "https://github.com/sushilbang/devlog"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
